Added Some electron dev and test packages

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "babel-loader": "^8.0.6",
+    "devtron": "^1.4.0",
     "electron": "^6.0.12",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.18.2",
+    "spectron": "^8.0.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
