--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^8.0.6",
     "electron": "^6.0.12",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
