--- a/package.json
+++ b/package.json
@@ -32,12 +32,17 @@
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "devtron": "^1.4.0",
     "electron": "^6.0.12",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
+    "sass-loader": "^8.0.0",
     "spectron": "^8.0.0",
+    "style-loader": "^1.0.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
