--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   }
