--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "noImplicitAny": true,
       "module": "commonjs",
       "target": "es5",
-      "jsx": "react"
+      "jsx": "react",
+      "downlevelIteration": true
     },
     "exclude": [
       "node_modules"
