--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "webpack-cli": "^3.3.9"
     },
     "dependencies": {
+        "@types/jest": "^24.0.20",
         "bootstrap": "^4.3.1",
         "electron-main-window": "^1.0.4",
         "electron-window-manager": "^1.0.6",
@@ -63,6 +64,7 @@
         "jquery": "^3.4.1",
         "popper.js": "^1.16.0",
         "react": "^16.10.2",
-        "react-dom": "^16.10.2"
+        "react-dom": "^16.10.2",
+        "ts-jest": "^24.1.0"
     }
 }
