--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/Release
 # Dependency directories
 node_modules/
 node_modules.zip
+node_modules.7z
 jspm_packages/
 
 # TypeScript v1 declaration files
