--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "chrome",
       "request": "attach",
       "name": "Electron: Renderer",
-      "port": 9222,
+      "port": 9223,
       "webRoot": "${workspaceFolder}",
       "timeout": 30000
     },
@@ -39,7 +39,12 @@
       "type": "node",
       "request": "launch",
       "cwd": "${workspaceRoot}",
+      "protocol": "inspector",
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+      "runtimeArgs": [
+        "--remote-debugging-port=9223",
+        "."
+    ],
       "windows": {
         "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
       },
