--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "popper.js": "^1.16.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "styled-components": "^4.4.1",
     "ts-jest": "^24.1.0"
   }
 }
