--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "buildRun": "npm run buildAll && npm run start",
         "build:react": "webpack --mode development --config webpack.react.config.js",
         "buildAll": "npm run build:react && npm run build",
-        "pack-Win": "electron-packager . HastingsPier --overwrite  --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Hastings Pier\" --ignore=^/src --ignore=^/.vscode --ignore=^node_modules.zip --ignore=^.gitignore --ignore=^\\.bablerc --ignore=^\\.log --ignore=^\\.pptx ",
+        "pack-Win": "electron-packager . HastingsPier --overwrite  --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Hastings Pier\" --ignore=^/src --ignore=^/.vscode --ignore=^node_modules.zip --ignore=^.gitignore --ignore=^\\.bablerc --ignore=^\\.log --ignore=^\\.pptx --ignore=^\\.md --ignore=^tsconfig --ignore=^tslint --ignore=^package-lock --ignore=^webpack",
         "buildPack-win": "npm run buildAll && npm run pack-Win"
     },
     "repository": {
