--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     },
     "dependencies": {
         "@types/jest": "^24.0.23",
+        "babel-jest": "^24.9.0",
+        "babel-polyfill": "^6.26.0",
         "bootstrap": "^4.4.1",
         "draft-js": "^0.11.3",
         "electron-main-window": "^1.0.4",
