--- a/package.json
+++ b/package.json
@@ -1,74 +1,74 @@
 {
-    "name": "HastingsPier",
-    "version": "0.1.0",
-    "description": "",
-    "main": "dist/main.js",
-    "scripts": {
-        "test": "jest --detectOpenHandles --coverage",
-        "start": "electron ./dist/main.js",
-        "build": "webpack --mode development",
-        "buildRun": "npm run buildAll && npm run start",
-        "build:react": "webpack --mode development --config webpack.react.config.js",
-        "buildAll": "npm run build:react && npm run build",
-        "pack-Win": "electron-packager . HastingsPier --overwrite  --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Hastings Pier\" --ignore=^/src --ignore=^/.vscode --ignore=^node_modules.zip --ignore=^.gitignore --ignore=^\\.bablerc --ignore=^\\.log --ignore=^\\.pptx --ignore=^\\.md --ignore=^tsconfig --ignore=^tslint --ignore=^package-lock --ignore=^webpack",
-        "buildPack-win": "npm run buildAll && npm run pack-Win"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/antonmaeso/HastingsPier.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/antonmaeso/HastingsPier/issues"
-    },
-    "homepage": "https://github.com/antonmaeso/HastingsPier#readme",
-    "devDependencies": {
-        "@babel/cli": "^7.7.4",
-        "@babel/core": "^7.7.4",
-        "@babel/plugin-proposal-class-properties": "^7.7.4",
-        "@babel/plugin-transform-arrow-functions": "^7.7.4",
-        "@babel/preset-env": "^7.7.4",
-        "@babel/preset-react": "^7.7.4",
-        "@babel/preset-typescript": "^7.7.4",
-        "@types/node": "^12.12.14",
-        "@types/react": "^16.9.13",
-        "@types/react-dom": "^16.9.4",
-        "babel-loader": "^8.0.6",
-        "css-loader": "^3.2.1",
-        "devtron": "^1.4.0",
-        "electron": "^6.1.5",
-        "electron-packager": "13.1.1",
-        "file-loader": "^4.3.0",
-        "html-webpack-plugin": "^3.2.0",
-        "image-webpack-loader": "^6.0.0",
-        "jest": "^24.9.0",
-        "mini-css-extract-plugin": "^0.8.0",
-        "node-sass": "^4.13.0",
-        "prettier": "^1.19.1",
-        "sass-loader": "^8.0.0",
-        "spectron": "^8.0.0",
-        "style-loader": "^1.0.1",
-        "tslint": "^5.20.1",
-        "typescript": "^3.7.2",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10"
-    },
-    "dependencies": {
-        "@types/jest": "^24.0.23",
-        "babel-jest": "^24.9.0",
-        "babel-polyfill": "^6.26.0",
-        "bootstrap": "^4.4.1",
-        "draft-js": "^0.11.3",
-        "electron-main-window": "^1.0.4",
-        "electron-window-manager": "^1.0.6",
-        "fs": "0.0.1-security",
-        "jquery": "^3.4.1",
-        "popper.js": "^1.16.0",
-        "react": "^16.12.0",
-        "react-dom": "^16.12.0",
-        "styled-components": "^4.4.1",
-        "ts-jest": "^24.2.0"
-    }
+  "name": "HastingsPier",
+  "version": "0.1.0",
+  "description": "",
+  "main": "dist/main.js",
+  "scripts": {
+    "test": "jest --detectOpenHandles --coverage -i",
+    "start": "electron ./dist/main.js",
+    "build": "webpack --mode development",
+    "buildRun": "npm run buildAll && npm run start",
+    "build:react": "webpack --mode development --config webpack.react.config.js",
+    "buildAll": "npm run build:react && npm run build",
+    "pack-Win": "electron-packager . HastingsPier --overwrite  --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Hastings Pier\" --ignore=^/src --ignore=^/.vscode --ignore=^node_modules.zip --ignore=^.gitignore --ignore=^\\.bablerc --ignore=^\\.log --ignore=^\\.pptx --ignore=^\\.md --ignore=^tsconfig --ignore=^tslint --ignore=^package-lock --ignore=^webpack",
+    "buildPack-win": "npm run buildAll && npm run pack-Win"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/antonmaeso/HastingsPier.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/antonmaeso/HastingsPier/issues"
+  },
+  "homepage": "https://github.com/antonmaeso/HastingsPier#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-arrow-functions": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.1",
+    "devtron": "^1.4.0",
+    "electron": "^6.1.5",
+    "electron-packager": "13.1.1",
+    "file-loader": "^4.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^6.0.0",
+    "jest": "^24.9.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.13.0",
+    "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
+    "spectron": "^8.0.0",
+    "style-loader": "^1.0.1",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "@types/jest": "^24.0.23",
+    "babel-jest": "^24.9.0",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.4.1",
+    "draft-js": "^0.11.3",
+    "electron-main-window": "^1.0.4",
+    "electron-window-manager": "^1.0.6",
+    "fs": "0.0.1-security",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "styled-components": "^4.4.1",
+    "ts-jest": "^24.2.0"
+  }
 }
